# ccai_client

./: .gitignore  CHANGELOG.md  README.md  login.py  pyproject.toml  test.py  whitelist_queries.py
ccai_client/: __init__.py  api.py  auth.py  core_classes.py  file_classes.py  patho.py  queries.py
examples/: login.py  working_with_slides.ipynb
notebooks/: import_geojson.ipynb  mask_to_polygon_collection.ipynb  run_algorithm.ipynb  upload_slides.ipynb  working_with_files.ipynb  working_with_slides.ipynb  working_with_studies.ipynb
