[tool.poetry]
name = "ccai-client"
version = "0.2.1"
description = "Client library for the CancerCenter.ai platform"
authors = ["Jarosław Kwiecień <jaroslaw.kwiecien@cancercenter.ai>"]
readme = "README.md"
packages = [{include = "ccai_client"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
dicomweb-client = "^0.59.1"
histpat_toolkit = { git = "https://github.com/cancercentereu/histpat-toolkit.git" }
pydantic = "^2.4.2"
tqdm = "^4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
